src/objects/TR1__ResumeSearch__c.object
<CustomObject>
    <fields>
        <fullName>TR1__All_Words__c</fullName>
        <inlineHelpText>This will allow you to perform an &quot;AND&quot; function.  To use this field simply type the word with a comma after.  Example, I need to find someone who has sales AND manager on their resume/CV I would enter:  sales, manager</inlineHelpText>
        <label>with all the words</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Background__c</fullName>
        <label>Background</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__BooleanKeyword__c</fullName>
        <label>boolean string</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Boolean_Keyword__c</fullName>
        <label>boolean string</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Call_List__c</fullName>
        <label>Call List</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Candidate_External_Id__c</fullName>
        <formula>TR1__Candidate__r.TR1__External_Candidate_Id__c</formula>
        <label>Candidate External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Candidate_Status__c</fullName>
        <label>Candidate Status</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Candidate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Candidate</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Resume Searches</relationshipLabel>
        <relationshipName>Resume_Searches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Certifications__c</fullName>
        <label>Certifications</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agile</fullName>
                </value>
                <value>
                    <fullName>ASCP</fullName>
                </value>
                <value>
                    <fullName>CBP</fullName>
                </value>
                <value>
                    <fullName>CCIE</fullName>
                </value>
                <value>
                    <fullName>CCNA</fullName>
                </value>
                <value>
                    <fullName>CCNP</fullName>
                </value>
                <value>
                    <fullName>CCP</fullName>
                </value>
                <value>
                    <fullName>CIA</fullName>
                </value>
                <value>
                    <fullName>CISA</fullName>
                </value>
                <value>
                    <fullName>CISM</fullName>
                </value>
                <value>
                    <fullName>CISSP</fullName>
                </value>
                <value>
                    <fullName>CLS</fullName>
                </value>
                <value>
                    <fullName>CPA</fullName>
                </value>
                <value>
                    <fullName>CQE</fullName>
                </value>
                <value>
                    <fullName>GPHR</fullName>
                </value>
                <value>
                    <fullName>HT</fullName>
                </value>
                <value>
                    <fullName>ITIL</fullName>
                </value>
                <value>
                    <fullName>MBA</fullName>
                </value>
                <value>
                    <fullName>MCA - Architects</fullName>
                </value>
                <value>
                    <fullName>MCITP</fullName>
                </value>
                <value>
                    <fullName>MCSE</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>OCA</fullName>
                </value>
                <value>
                    <fullName>OCP</fullName>
                </value>
                <value>
                    <fullName>PHR</fullName>
                </value>
                <value>
                    <fullName>PMI-ACP</fullName>
                </value>
                <value>
                    <fullName>PMP</fullName>
                </value>
                <value>
                    <fullName>RAC</fullName>
                </value>
                <value>
                    <fullName>RHCE - Red Hat</fullName>
                </value>
                <value>
                    <fullName>Scrum Master</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Contact_Owner_Ids__c</fullName>
        <label>Contact Owner Ids</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Contact_Owner_Names__c</fullName>
        <label>Contact Owner</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>United Kingdom(UK)</fullName>
                    <default>true</default>
                    <label>United Kingdom(UK)</label>
                </value>
                <value>
                    <fullName>Australia(AU)</fullName>
                </value>
                <value>
                    <fullName>Canada(CA)</fullName>
                </value>
                <value>
                    <fullName>New Zealand(NZ)</fullName>
                </value>
                <value>
                    <fullName>Albania (AL)</fullName>
                </value>
                <value>
                    <fullName>Andorra(AD)</fullName>
                </value>
                <value>
                    <fullName>Armenia(AM)</fullName>
                </value>
                <value>
                    <fullName>Austria(AT)</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan(AZ)</fullName>
                </value>
                <value>
                    <fullName>Belarus(BY)</fullName>
                </value>
                <value>
                    <fullName>Belgium(BE)</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina(BA)</fullName>
                </value>
                <value>
                    <fullName>Brazil(BR)</fullName>
                </value>
                <value>
                    <fullName>Bulgaria(BG)</fullName>
                </value>
                <value>
                    <fullName>China(CN)</fullName>
                </value>
                <value>
                    <fullName>Croatia(HR)</fullName>
                </value>
                <value>
                    <fullName>Czech Republic(CZ)</fullName>
                </value>
                <value>
                    <fullName>Denmark(DK)</fullName>
                </value>
                <value>
                    <fullName>Estonia(EE)</fullName>
                </value>
                <value>
                    <fullName>Finland(FI)</fullName>
                </value>
                <value>
                    <fullName>France(FR)</fullName>
                </value>
                <value>
                    <fullName>Georgia(GE)</fullName>
                </value>
                <value>
                    <fullName>Germany (DE)</fullName>
                </value>
                <value>
                    <fullName>Greece(GR)</fullName>
                </value>
                <value>
                    <fullName>Hungary(HU)</fullName>
                </value>
                <value>
                    <fullName>Iceland(IS)</fullName>
                </value>
                <value>
                    <fullName>Ireland(IE)</fullName>
                </value>
                <value>
                    <fullName>Italy(IT)</fullName>
                </value>
                <value>
                    <fullName>Japan(JP)</fullName>
                </value>
                <value>
                    <fullName>Kazakhstan(KZ)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Created_From_Date__c</fullName>
        <label>From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1__Created_To_Date__c</fullName>
        <label>To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1__Exact_Phrase__c</fullName>
        <inlineHelpText>This will allow you to encapsulate the search terms  To use this field put quotes around the phrase.   Example, I need to find someone has sales manager on their resume/CV.  I would enter: &quot;sales manager&quot;</inlineHelpText>
        <label>with the exact phrase</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Experience_Level__c</fullName>
        <label>Experience Level</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__External_Credentials__c</fullName>
        <label>External Credentials</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__External_Search_Request__c</fullName>
        <label>External Search Request</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Fields_for_Selection__c</fullName>
        <label>Fields for Selection</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Function__c</fullName>
        <label>Function</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Industry_Experience__c</fullName>
        <label>Industry Experience</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Advertising</fullName>
                </value>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Airlines/Aviation</fullName>
                </value>
                <value>
                    <fullName>Animation</fullName>
                </value>
                <value>
                    <fullName>Apparel</fullName>
                </value>
                <value>
                    <fullName>Biotechnology</fullName>
                </value>
                <value>
                    <fullName>Chemicals</fullName>
                </value>
                <value>
                    <fullName>Communications</fullName>
                </value>
                <value>
                    <fullName>Computer Games</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Consumer Product</fullName>
                </value>
                <value>
                    <fullName>Cosmetic</fullName>
                </value>
                <value>
                    <fullName>eCommerce</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Electronics</fullName>
                </value>
                <value>
                    <fullName>Energy</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Entertainment</fullName>
                </value>
                <value>
                    <fullName>Environmental</fullName>
                </value>
                <value>
                    <fullName>Financial Services</fullName>
                </value>
                <value>
                    <fullName>Food &amp; Beverage</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Hardware</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>Hospitality</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Internet</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Job_Board_Ids__c</fullName>
        <label>Job_Board_Ids</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Job_Boards__c</fullName>
        <label>Job_Boards</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Linked In</fullName>
                </value>
                <value>
                    <fullName>Monster</fullName>
                </value>
                <value>
                    <fullName>Career Builder</fullName>
                </value>
                <value>
                    <fullName>BioSpace</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job</label>
        <referenceTo>TR1__Job__c</referenceTo>
        <relationshipLabel>Resume Searches</relationshipLabel>
        <relationshipName>Resume_Searches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Languages_Operator__c</fullName>
        <label>Languages Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OR</fullName>
                    <default>true</default>
                    <label>OR</label>
                </value>
                <value>
                    <fullName>AND</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Languages__c</fullName>
        <label>Languages</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__LastActivity_From_Date__c</fullName>
        <label>From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1__LastActivity_To_Date__c</fullName>
        <label>To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1__Maximum_Hourly__c</fullName>
        <label>Hourly Maximum</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Maximum_Salary__c</fullName>
        <label>Annual Maximum</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Minimum_Hourly__c</fullName>
        <label>Hourly Minimum</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Minimum_Salary__c</fullName>
        <label>Annual Minimum</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__One_Word__c</fullName>
        <inlineHelpText>This will allow you to perform an &quot;OR&quot; function.  To use this field simply type the word with a comma after.  Example, I need to find someone who has sales OR manager on their resume/CV I would enter:  sales, manager</inlineHelpText>
        <label>with at least one of the words</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__RS20_Job_Board_List__c</fullName>
        <formula>$Setup.TR1__TalentRoverProperties__c.TR1__Talent_Rover_API__c + 
&quot;/connections/&quot; + $Organization.Id + &quot;/job_boards.json&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RS20 Job Board List</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__RS20_Post_Url__c</fullName>
        <formula>$Setup.TR1__TalentRoverProperties__c.TR1__Talent_Rover_API__c + 
&quot;/connections/&quot; + $Organization.Id + &quot;/resume_searches.json?UID=&quot; &amp; CASESAFEID( $User.Id )  &amp; &quot;&amp;SID=&quot; + $Api.Session_ID</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RS20 Post Url</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__RS20_Url__c</fullName>
        <formula>$Setup.TR1__TalentRoverProperties__c.TR1__Talent_Rover_API__c + 
&quot;/connections/&quot; + $Organization.Id + &quot;/resume_searches/&quot; +  CASESAFEID(Id) + 
&quot;.json?SID=&quot; + $Api.Session_ID</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RS20 Url</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Radius__c</fullName>
        <label>Radius</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                    <default>true</default>
                    <label>25</label>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>35</fullName>
                </value>
                <value>
                    <fullName>45</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
                <value>
                    <fullName>500</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Recency__c</fullName>
        <label>Recency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Regional_Area__c</fullName>
        <defaultValue>&quot;San Francisco Metro Area;San Jose Metro Area&quot;</defaultValue>
        <label>Regional Area</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Result_URL__c</fullName>
        <label>Result URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Saved_Result__c</fullName>
        <label>Saved Result</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Saved_Search_Name__c</fullName>
        <label>Saved Search Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Skills_Operator__c</fullName>
        <label>Skills Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OR</fullName>
                    <default>true</default>
                    <label>OR</label>
                </value>
                <value>
                    <fullName>AND</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Skills__c</fullName>
        <label>Skills</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__State_Area__c</fullName>
        <label>Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Systems_Experience__c</fullName>
        <label>Systems Experience</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ADP</fullName>
                </value>
                <value>
                    <fullName>ADP 2001</fullName>
                </value>
                <value>
                    <fullName>ADP HRB</fullName>
                </value>
                <value>
                    <fullName>AERS</fullName>
                </value>
                <value>
                    <fullName>Argus</fullName>
                </value>
                <value>
                    <fullName>ARISg</fullName>
                </value>
                <value>
                    <fullName>AS400</fullName>
                </value>
                <value>
                    <fullName>Clintrace</fullName>
                </value>
                <value>
                    <fullName>Clintrial</fullName>
                </value>
                <value>
                    <fullName>Cognos</fullName>
                </value>
                <value>
                    <fullName>CTI</fullName>
                </value>
                <value>
                    <fullName>CTMS</fullName>
                </value>
                <value>
                    <fullName>EDC</fullName>
                </value>
                <value>
                    <fullName>Epicor</fullName>
                </value>
                <value>
                    <fullName>FAST</fullName>
                </value>
                <value>
                    <fullName>Fourthshift</fullName>
                </value>
                <value>
                    <fullName>Great Plains</fullName>
                </value>
                <value>
                    <fullName>Hyperion</fullName>
                </value>
                <value>
                    <fullName>IFS</fullName>
                </value>
                <value>
                    <fullName>InForm</fullName>
                </value>
                <value>
                    <fullName>In-house</fullName>
                </value>
                <value>
                    <fullName>JD Edwards</fullName>
                </value>
                <value>
                    <fullName>Lawson</fullName>
                </value>
                <value>
                    <fullName>Macola</fullName>
                </value>
                <value>
                    <fullName>MAS 200</fullName>
                </value>
                <value>
                    <fullName>MAS 90</fullName>
                </value>
                <value>
                    <fullName>MAS Sage</fullName>
                </value>
                <value>
                    <fullName>Maypics</fullName>
                </value>
                <value>
                    <fullName>MRI</fullName>
                </value>
                <value>
                    <fullName>MRI-Skyline</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Tags__c</fullName>
        <label>Tags</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Saved</fullName>
                </value>
                <value>
                    <fullName>History</fullName>
                    <default>true</default>
                    <label>History</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Units_Of_Measure__c</fullName>
        <description>Will be used in search and match to find out the candidates within the range.</description>
        <label>Units Of Measure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Miles</fullName>
                    <default>true</default>
                    <label>Miles</label>
                </value>
                <value>
                    <fullName>Kilometers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Zip_Code__c</fullName>
        <label>Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Resume Search</label>
    <nameField>
        <displayFormat>RS-{0000000000}</displayFormat>
        <label>Resume Search Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resume Searches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>